<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context=".ui.recognition.poem7.Poem7RecognitionActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/poem7_recognition_instruction"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/btChar"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/char_button_selector"
        android:textOff="1"
        android:textOn="1"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/btChar1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btAnsChar" />

    <ToggleButton
        android:id="@+id/btChar1"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/char_button_selector"
        android:textOff="2"
        android:textOn="2"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/btChar2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btChar"
        app:layout_constraintTop_toBottomOf="@+id/btAnsChar" />

    <ToggleButton
        android:id="@+id/btChar2"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/char_button_selector"
        android:textOff="3"
        android:textOn="3"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btChar1"
        app:layout_constraintTop_toBottomOf="@+id/btAnsChar" />

    <ToggleButton
        android:id="@+id/btChar3"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/char_button_selector"
        android:textOff="4"
        android:textOn="4"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/btChar4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btChar" />

    <ToggleButton
        android:id="@+id/btChar4"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/char_button_selector"
        android:textOff="5"
        android:textOn="5"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/btChar5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btChar3"
        app:layout_constraintTop_toBottomOf="@+id/btChar1" />

    <ToggleButton
        android:id="@+id/btChar5"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/char_button_selector"
        android:textOff="6"
        android:textOn="6"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btChar4"
        app:layout_constraintTop_toBottomOf="@+id/btChar1" />

    <ToggleButton
        android:id="@+id/btChar6"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/char_button_selector"
        android:textOff="7"
        android:textOn="7"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/btChar7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btChar3" />

    <ToggleButton
        android:id="@+id/btChar7"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/char_button_selector"
        android:textOff="8"
        android:textOn="8"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/btChar8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btChar6"
        app:layout_constraintTop_toBottomOf="@+id/btChar3" />

    <ToggleButton
        android:id="@+id/btChar8"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/char_button_selector"
        android:textOff="9"
        android:textOn="9"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btChar7"
        app:layout_constraintTop_toBottomOf="@+id/btChar3" />

    <ToggleButton
        android:id="@+id/btChar9"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/char_button_selector"
        android:textOff="10"
        android:textOn="10"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/btChar10"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btChar6" />

    <ToggleButton
        android:id="@+id/btChar10"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/char_button_selector"
        android:textOff="11"
        android:textOn="11"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/btChar11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btChar9"
        app:layout_constraintTop_toBottomOf="@+id/btChar6" />

    <ToggleButton
        android:id="@+id/btChar11"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/char_button_selector"
        android:textOff="12"
        android:textOn="12"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btChar10"
        app:layout_constraintTop_toBottomOf="@+id/btChar6" />

    <Button
        android:id="@+id/btAnsChar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/btAnsChar1"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <Button
        android:id="@+id/btAnsChar1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/btAnsChar2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btAnsChar"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <Button
        android:id="@+id/btAnsChar2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/btAnsChar3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btAnsChar1"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <Button
        android:id="@+id/btAnsChar3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/btAnsChar4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btAnsChar2"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <Button
        android:id="@+id/btAnsChar4"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/btAnsChar5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btAnsChar3"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <Button
        android:id="@+id/btAnsChar5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/darker_gray"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/btAnsChar6"
        app:layout_constraintStart_toEndOf="@+id/btAnsChar4"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <Button
        android:id="@+id/btAnsChar6"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:background="@android:color/darker_gray"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btAnsChar5"
        app:layout_constraintTop_toBottomOf="@+id/tvInstructions" />

    <Button
        android:id="@+id/btHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/help"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/next"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>